--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "gh-pages": "^5.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^9.0.5",
     "tslib": "^2.3.0",
