breakdown of each change: 1- The application's state management was changed to use Redux to handle asynchronous data flows. The initial state of the application was defined and an interface was created to ensure type safety. Actions were implemented to handle changes to the application state, and a reducer was created to handle those actions and update the state accordingly. 2- The application's styles were separated into different files for better organization. This included creating separate files for container components, skeleton components, and animations. 3- The mock service was removed and persistent caching was implemented to save the application's state between changes. This helped to optimize the application's performance by preventing the need to retrieve data from the server every time 4-A bug in the application's animation was fixed to create a smoother user experience. 5- The structure of the home component's HTML was refactored to make it clearer and more readable for developers who may need to work on the code in the future.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@ngrx/store": "^15.3.0",
     "gh-pages": "^5.0.0",
+    "redux-persist": "^6.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^9.0.5",
     "tslib": "^2.3.0",
